--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rufus</title>
-    <link rel="stylesheet"  href="css/style.css">
+    <link rel="stylesheet"  href="cv/css/style.css">
     <link rel="icon" href="fav.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,16 +14,16 @@
        
 <body>
     <div class="top-container">
-        <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+        <img class="top-cloud" src="cv/images/cloud.png" alt="cloud-img">
         <h1>I'Am Rufus</h1>
         <p>A full stack developer</p></td>
-        <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
+        <img class="bottom-cloud" src="cv/images/cloud.png" alt="cloud-img">
         <img src="images/mountain.png" alt="mountain img">
     </div>
 
     <div class="top2-container">
         <h2 class="aboutee">About Me</h2>
-        <img class="profile" src="images/11111.jpg" alt="">
+        <img class="profile" src="cv/images/11111.jpg" alt="">
     
         <p class="about-content">I'm a Full Stack Developer with one year of experience in creating responsive and user-friendly 
             web applications.My technical expertise includes front-end and back-end technologies
